<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_cadastrar_medicamento"
    android:overScrollMode="never"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.FragmentCadastrarNovoMedicamento">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...





        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_medicine_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/medicine_name"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:saveEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_title_activity_add_medicine">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_medicine_name_child"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:saveEnabled="true"
                android:textSize="28sp"
                android:inputType="text"/>

...
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_medicine_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_medicine_qnt_per_day_child"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_marginHorizontal="16dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/label_duracao_tratamento"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_duracao_dias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:fontFamily="sans-serif-medium"
                android:layout_weight="1"
                android:backgroundTint="?attr/colorPrimary"
...
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_duracao_tratamento">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_medicine_time_treatment_child"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>
...
                android:id="@+id/et_til_time_first_take"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_open_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_time_of_first_dose"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"
...





        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/input_data_inicio_tratamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_open_time_picker"
            android:inputType="number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:mask="__/__/____"
...
            android:layout_marginTop="20dp"
            app:maskStyle="normal" />



        <Button
            android:id="@+id/btn_confirm_new_medication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_medication"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"
...
