<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/medicamentosFragment">

    <fragment
        android:id="@+id/medicamentosFragment"
        android:name="com.rubens.applembretemedicamento.presentation.FragmentListaMedicamentos"
        tools:layout="@layout/fragment_lista_medicamentos">

        <action
            android:id="@+id/action_medicamentosFragment_to_fragmentCadastrarNovoMedicamento"
            app:destination="@id/fragmentCadastrarNovoMedicamento" />
        <action
            android:id="@+id/action_medicamentosFragment_to_fragmentDetalhesMedicamentos"
            app:destination="@id/fragmentDetalhesMedicamentos" />
        <action
            android:id="@+id/action_medicamentosFragment_to_fragmentConfiguracoes"
            app:destination="@id/fragmentConfiguracoes" />
    </fragment>
    <fragment
        android:id="@+id/fragmentCadastrarNovoMedicamento"
...
