...
        app:layout_constraintTop_toBottomOf="@id/medicamentos_label"
        tools:text="17/09/2022"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/medicamento"
        tools:itemCount="7"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fab"
        app:layout_constraintBottom_toTopOf="@id/adView"/>



            <ProgressBar
                android:id="@+id/loadingProgressBar"
...
