...
        />




    <ImageButton
        android:id="@+id/btn_armar_alarme"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:elevation="8dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="10dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/adView"
        android:src="@drawable/ic_baseline_timer_off_24"
        app:tint="?android:textColorSecondary"/>

    <ImageButton
        android:id="@+id/btn_parar_som"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:backgroundTint="?android:textColorPrimary"
        android:background="@drawable/ripple_oval"
        android:elevation="8dp"
        android:scaleType="center"
...
